# infoway-sdk-python

./: .gitignore  README.md  README_CN.md  pyproject.toml
src/infoway/: __init__.py  _http.py  _types.py  client.py  exceptions.py
src/infoway/rest/: _market_data.py  basic.py  common.py  crypto.py  india.py  japan.py  market.py  plate.py  stock.py  stock_info.py
src/infoway/ws/: __init__.py  client.py
tests/: conftest.py  test_basic.py  test_client.py  test_crypto.py  test_exceptions.py  test_http.py  test_market.py  test_plate.py  test_stock.py  test_stock_info.py  test_ws.py
